Support building with Java 11 and Java 17 (#33)
* Support building with Java 11 and Java 17

Update the project to build and test with Java 11 and Java 17.

- Enhanced GitHub Actions workflow (`build.yml`) to use a build matrix
  for Java 11 and 17, and updated JDK setup and Maven caching.
- Updated `pom.xml`:
  - Configured `maven-compiler-plugin` with `<release>11</release>`.
  - Added and configured `maven-surefire-plugin` with necessary
    `--add-opens` arguments for test execution on newer JDKs.
- Introduced `.mvn/jvm.config` with `--add-opens` arguments to allow
  reflective access for the Maven build process on newer JDKs.

* Update workflow to ubuntu 22.04

* Update workflow to checkout@v4

* Update workflow setup-java@v4

---------

Co-authored-by: Jody Garnett <jody.garnett@gmail.com>